# flutter-compositor

./: LICENSE-EXTRA  README.md
flutter/: .metadata  pubspec.yaml
flutter/lib/: flutter_compositor.dart
flutter/test/: flutter_compositor_test.dart
rust/: .gitignore  Cargo.toml  build.rs  removed.txt
rust/src/: input_handler.rs  lib.rs  shell.rs  window_map.rs
rust/src/backends/: input_handler.rs  mod.rs  seat.rs  udev.rs  winit.rs
rust/src/backends/input/: glfw.rs  handler.rs  manager.rs  mod.rs
rust/src/flutter/: callbacks.rs  error.rs  ffi.rs  macros.rs  mod.rs  textinput.rs  utils.rs
rust/src/flutter/channel/: basic_message_channel.rs  event_channel.rs  json_method_channel.rs  macros.rs  mod.rs  registry.rs  standard_method_channel.rs
rust/src/flutter/codec/value/: deserializer.rs
rust/src/renderer/: egl_util.rs  gl.rs  gl_util.rs  mod.rs
