[package]
name = "flutter_compositor"
version = "0.1.0"
authors = ["csnewman"]
edition = "2018"

[dependencies]
log = "0.4.6"
fern = { version = "^0.5", features = ["colored"] }
chrono = "^0.4"
rand = "0.6"
wayland-server = "0.23"
xkbcommon = "0.4.0"
libc = "0.2.44"
winit = "*"
tokio = "^0.1.19"
serde = { version = "^1.0", features = ["derive"] }
serde_json = "^1.0"
parking_lot = "0.9"
flutter-engine-sys = "0.3.5"

[dependencies.smithay]
path = "../../smithay"
default-features = false
features = [ "backend_egl", "wayland_frontend", "native_lib", "backend_winit", "backend_libinput", "backend_drm_legacy", "backend_drm_gbm", "backend_drm_egl", "backend_udev", "backend_session", "backend_session_logind"]

[build-dependencies]
gl_generator = "0.13"
